@@ -30,11 +30,11 @@ import java.util.Arrays;
  * @summary Test that, when using a larger object alignment, ZGC arraycopy
  *          barriers are only applied to actual OOPs, and not to object
  *          alignment padding words.
- * @requires vm.gc.ZGenerational
+ * @requires vm.gc.Z
  * @run main/othervm -Xbatch -XX:-TieredCompilation
  *                   -XX:CompileOnly=compiler.gcbarriers.TestArrayCopyWithLargeObjectAlignment::*
  *                   -XX:ObjectAlignmentInBytes=16
- *                   -XX:+UseZGC -XX:+ZGenerational
+ *                   -XX:+UseZGC
  *                   compiler.gcbarriers.TestArrayCopyWithLargeObjectAlignment
  */
 
