@@ -33,25 +33,14 @@
  */
 
 /*
- * @test id=ZSinglegen
+ * @test id=Z
  * @bug 8240654
  * @summary Test painting a large window works
  * @key headful
  * @requires (os.family == "windows")
- * @requires vm.gc.ZSinglegen
- * @run main/othervm -XX:+UseZGC -XX:-ZGenerational -Dsun.java2d.uiScale=1 LargeWindowPaintTest
- * @run main/othervm -XX:+UseZGC -XX:-ZGenerational -Dsun.java2d.uiScale=1 -Dsun.java2d.d3d=false LargeWindowPaintTest
- */
-
-/*
- * @test id=ZGenerational
- * @bug 8240654
- * @summary Test painting a large window works
- * @key headful
- * @requires (os.family == "windows")
- * @requires vm.gc.ZGenerational
- * @run main/othervm -XX:+UseZGC -XX:+ZGenerational -Dsun.java2d.uiScale=1 LargeWindowPaintTest
- * @run main/othervm -XX:+UseZGC -XX:+ZGenerational -Dsun.java2d.uiScale=1 -Dsun.java2d.d3d=false LargeWindowPaintTest
+ * @requires vm.gc.Z
+ * @run main/othervm -XX:+UseZGC -Dsun.java2d.uiScale=1 LargeWindowPaintTest
+ * @run main/othervm -XX:+UseZGC -Dsun.java2d.uiScale=1 -Dsun.java2d.d3d=false LargeWindowPaintTest
  */
 
 import java.awt.Color;
